Adds detection for iPro Opal 4S

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -8755,7 +8755,7 @@ iNew:
 
 # iPro
 iPro:
-  regex: '(?:Kylin[ _]5.[05]S?|KYLIN40|Jade[78]s|Amber[67]S?|Amber5S_Pro|Phonenix50S|Zafiro|I9355A)(?:[);/ ]|$)'
+  regex: '(?:Kylin[ _]5.[05]S?|KYLIN40|Jade[78]s|Amber[67]S?|Amber5S_Pro|Phonenix50S|Zafiro|I9355A|Opal 4S)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Kylin_5.0S'
@@ -8764,6 +8764,8 @@ iPro:
       model: 'Kylin $1'
     - regex: 'KYLIN40'
       model: 'Kylin 40'
+    - regex: 'Opal 4S'
+      model: 'Opal 4S'
     - regex: 'Jade([78])s'
       model: 'Jade $1s'
     - regex: 'Amber7S'
