Improves detection for Alcatel, Aspera, Blu, Doro, Kodak, KRIP, Microsoft, TCL, Zuum brands, adds detection for Instabridge app, improves detection for Avast Secure Browser and Web Explorer (#6933)
* Improves detection for Alcatel 1SE (2020)
* Improves detection for Alcatel 3X (2020)
* Improves detection for TCL L7
* Adds detection for TCL L9S
* Adds detection for TCL T Pro
* Improves detection for Alcatel 1B (2020)
* Adds detection for TCL Signa
* Adds detection for Zuum Akus Pro
* Adds detection for Zuum Akus Z1
* Improves detection for Alcatel 1B (2020)
* Improves detection for Alcatel 1SE (2020)
* Improves detection for TCL L7
* Adds detection for TCL L10+
* Improves detection for Alcatel 3C (2019)
* Improves detection for Alcatel 1S
* Adds detection for TCL L9 Plus
* Adds detection for TCL T9

* Improves version detection for Avast Secure Browser
* Improves detection for Web Explorer
* Adds detection for Instabridge

* Adds detection for Microsoft Surface Duo
* Adds detection for Kodak Smartway L1 Pro
* Adds detection for Kodak Smartway M2
* Adds detection for Kodak Smartway L1
* Adds detection for Kodak Smartway L2
* Adds detection for Kodak Smartway F1
* Adds detection for Doro 8080
* Adds detection for Doro 8050
* Adds detection for Microsoft Surface Duo 2
* Adds detection for Blu Bold M7
* Improves detection for Aspera R9
* Adds detection for KRIP K5m
* Adds detection for KRIP K5d
* Adds detection for KRIP K6b
* Adds detection for KRIP K5b
* Adds detection for KRIP K55h
* Adds detection for KRIP K65
* Adds detection for KRIP K57

--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -946,7 +946,7 @@
   version: '$1'
 
 # Avast Secure Browser | Avast SafeZone Browser (https://www.avast.com/)
-- regex: '(?:Avast|ASW|Safer)(?:/(\d+[\.\d]+))?'
+- regex: '(?:Avast(?:SecureBrowser)?|ASW|Safer)(?:/(\d+[\.\d]+))?'
   name: 'Avast Secure Browser'
   version: '$1'
 
@@ -1678,6 +1678,11 @@
 
 # Web Explorer
 - regex: 'Web Explorer/(\d+[\.\d]+).*Chrome'
+  name: 'Web Explorer'
+  version: '$1'
+  engine:
+    default: 'WebKit'
+- regex: 'webexplorer/(\d+)'
   name: 'Web Explorer'
   version: '$1'
   engine:
