--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -258,7 +258,7 @@ HTC:
 
 # microsoft
 Microsoft:
-  regex: 'KIN\.(One|Two)|RM-(?:1010|1031|106[57]|107[23467]|1089|109[02]|1096|1099|1109|111[348]|1127|1141|115[24]|994)|Microsoft; Lumia|Lumia (?:1530|1320|950|850|650|640|550|535|435)|Corporation/Surface'
+  regex: 'KIN\.(One|Two)|RM-(?:1010|1031|106[57]|107[23467]|1089|109[02]|1096|1099|1109|111[348]|1127|1141|115[24]|994)|Microsoft; Lumia|Lumia (?:1530|1320|950|850|650|640|550|535|435)|Corporation/Surface|Surface Duo'
   device: 'smartphone'
   models:
     - regex: 'KIN\.(One|Two)'
@@ -321,6 +321,13 @@ Microsoft:
     - regex: 'Surface Pro( [34])?'
       device: 'desktop'
       model: 'Surface Pro$1'
+
+    - regex: 'Surface Duo 2'
+      device: 'tablet'
+      model: 'Surface Duo 2'
+    - regex: 'Surface Duo'
+      device: 'tablet'
+      model: 'Surface Duo'
 
     - regex: 'Microsoft; Lumia ([^;/)]+)(?:[;/)]|$)'
       model: 'Lumia $1'
@@ -1683,7 +1690,7 @@ Arian Space:
 
 # Alcatel (alcatelmobile.com)
 Alcatel:
-  regex: 'Alcatel|Alc(?!or )[a-z0-9]+|One[ _]?Touch|idol3|TIMXL|(?:(?:4003[AJ]|4009[ADEFIKMSX]|4013[DEJKMX]|4014[ADEKMX]|4015[ADNTX]|4016[ADX]|4017[ADEFSX]|4018[ADEFMX]|4024[DEX]|4027[ADNX]|4028[AEJS]|4032[ADEX]|4034[ADEFGLTX]|4035[ADXY]|4045[ADELX]|4047[ADFGNX]|4049[DEGMX]|4060[SW]|4087U|4114E|5001[ADJTU]|5002[ABDEFHRSX]|5003[ADGU]|5006[DG]|5007[AGU]|5008[ADTUY]|5009[AD]|5010[DEGSUX]|5011A|5012[DFG]|5015[ADEX]|5016[AJX]|5017[ABDEOX]|5019D|5022[DEX]|5023[EF]|5024[ADFJ]|5025[DEG]|5026[ADJ]|5027B|5028[ADY]|5029[ADEFY]|5030[ADEFU]|5032W|5033(?:XR|[ADEFGJMOQSTXY])|5034D|5036D|5038[ADEX]|5039[DY]|5041[CD]|5042[ADEFGTWX]|5044[ADGIKOPSTY]|5045[ADFGIJTXY]|5046[ADGIJSTUY]|5047[DIUY]|5048[AIUY]|5049[EGSWZ]|5050[ASXY]|5051[ADEJMTWX]|5052[ADY]|5053[ADKY]|5054[ADNSTWX]|5056[ADEGIJMNTUWX]|5057M|5058[AIY]|5059[ADIJSTXYZ]|5060[ADJ]|5061[KU]|5065[ADNWX]|5070D|5080[ADFQUX]|5085[ABCDGHIJNOQY]|5086[ADY]|5090[AIY]|5095[IKY]|5098[OS]|5099[ADIUY]|5116J|5145A|6016[ADEX]|6025H|6036[AXY]|6037[BKY]|6039[AHJKSY]|6042D|6043[AD]|6044D|6045[BFIKOXY]|6050[AFY]|6055[ABDHIKPUYZ]|6056H|6058[ADX]|6060[SXC]|6062W|6070K|7040[ADEFKRT]|7041[DX]|7042A|7043[AEKY]|7044[AX]|7045Y|7048[ASWX]|7053D|7055A|7070X|7071[ADX]|8030Y|8050[DEGX]|8063|8088[MQX]|8094M|9001[DIX]|9002X|9003[AX]|9005X|9007[ATX]|9008[ADIJNTUX]|9009G|9010X|9013[AX]|9020A|9022X|9024O|9026X|9027[FQTWX]|9029Z|9032[WXZ]|9203A|A(?:46[46]BG|57[04]BL|576CC|621BL|50[13]DL|57[17]VL)|I213|I216[AX]|(?<!\.)80(?:82|6[78]|5[12]))(?:_(?:EEA|RU|TR))?|P3[36]0X|AM-H200)(?:[);/ ]|$)'
+  regex: 'Alcatel|Alc(?!or )[a-z0-9]+|One[ _]?Touch|idol3|TIMXL|(?:(?:4003[AJ]|4009[ADEFIKMSX]|4013[DEJKMX]|4014[ADEKMX]|4015[ADNTX]|4016[ADX]|4017[ADEFSX]|4018[ADEFMX]|4024[DEX]|4027[ADNX]|4028[AEJS]|4032[ADEX]|4034[ADEFGLTX]|4035[ADXY]|4045[ADELX]|4047[ADFGNX]|4049[DEGMX]|4060[SW]|4087U|4114E|5001[ADJTU]|5002[ABDEFHLMRSX]|5003[ADGU]|5006[ADG]|5007[AGU]|5008[ADTUY]|5009[AD]|5010[DEGSUX]|5011A|5012[DFG]|5015[ADEX]|5016[AJX]|5017[ABDEOX]|5019D|5022[DEX]|5023[EF]|5024[ADFIJ]|5025[DEG]|5026[ADJ]|5027B|5028[ADY]|5029[ADEFY]|5030[ADEFJMU]|5032W|5033(?:XR|[ADEFGJMOQSTXY])|5034D|5036D|5038[ADEX]|5039[DY]|5041[CD]|5042[ADEFGTWX]|5044[ADGIKOPSTY]|5045[ADFGIJTXY]|5046[ADGIJSTUY]|5047[DIUY]|5048[AIUY]|5049[EGSWZ]|5050[ASXY]|5051[ADEJMTWX]|5052[ADY]|5053[ADKY]|5054[ADNSTWX]|5056[ADEGIJMNTUWX]|5057M|5058[AIY]|5059[ADIJSTXYZ]|5060[ADJ]|5061[AKU]|5065[ADNWX]|5070D|5080[ADFQUX]|5085[ABCDGHIJNOQY]|5086[ADY]|5090[AIY]|5095[IKY]|5098[OS]|5099[ADIUY]|5116J|5145A|6016[ADEX]|6025H|6036[AXY]|6037[BKY]|6039[AHJKSY]|6042D|6043[AD]|6044D|6045[BFIKOXY]|6050[AFY]|6055[ABDHIKPUYZ]|6056H|6058[ADX]|6060[SXC]|6062W|6070K|7040[ADEFKRT]|7041[DX]|7042A|7043[AEKY]|7044[AX]|7045Y|7048[ASWX]|7053D|7055A|7070X|7071[ADX]|8030Y|8050[DEGX]|8063|8088[MQX]|8094M|9001[DIX]|9002X|9003[AX]|9005X|9007[ATX]|9008[ADIJNTUX]|9009G|9010X|9013[AX]|9020A|9022X|9024O|9026X|9027[FQTWX]|9029Z|9032[WXZ]|9203A|A(?:46[46]BG|57[04]BL|576CC|621BL|50[13]DL|57[17]VL)|I213|I216[AX]|(?<!\.)80(?:82|6[78]|5[12]))(?:_(?:EEA|RU|TR))?|P3[36]0X|AM-H200)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '4087U'
@@ -1754,11 +1761,9 @@ Alcatel:
       model: 'One Touch Astro'
     - regex: '5027B'
       model: 'One Touch Dawn'
-    - regex: '5024[ADF]|5028Y|6025H'
-      model: '1S'
     - regex: '7071[ADX]'
       model: 'A7 XL'
-    - regex: '5002[ABDEHSX]'
+    - regex: '5002[ABDEHLMSX]'
       model: '1B (2020)'
     - regex: '(?:Alcatel_)?5002R'
       model: 'Volta'
@@ -2030,15 +2035,15 @@ Alcatel:
       model: '1V (2020)'
     - regex: '5003[ADGU]'
       model: '1C (2019)'
-    - regex: '5006[DG]'
+    - regex: '5006[ADG]'
       model: '3C (2019)'
-    - regex: '5024J'
+    - regex: '5024[ADFIJ]|5028Y|6025H'
       model: '1S'
     - regex: '5028[AD]'
       model: '1S (2020)'
     - regex: '5030E'
       model: '1SP (2020)'
-    - regex: '5030[ADFU]'
+    - regex: '5030[ADFJMU]'
       model: '1SE (2020)'
     - regex: '5001[ADJTU]'
       model: '1V'
@@ -2064,7 +2069,7 @@ Alcatel:
       device: 'phablet'
     - regex: '5058[AIY]'
       model: '3X'
-    - regex: '5061[KU]'
+    - regex: '5061[AKU]'
       model: '3X (2020)'
     - regex: '5086[ADY]'
       model: '5'
@@ -3027,7 +3032,7 @@ Bitel:
 
 # Blu
 Blu:
-  regex: 'BLU[ _]|(?:blu|Dash)[ _]([^/;)]+)(?: Build|[;)])|(?:Studio[ _](5.0K|5.5|View XL|Mega|C 8\+8|[CGM][ _]HD|[CGX]|SELFIE|Selfie LTE|Touch|M5 Plus|J[1258]|X8 HD|X10)|Advance (4.0 ?[LM]|5.[02](?: HD)?|A4|L[45])|M6 2021|ENERGY (DIAMOND|XL)|Energy X 2|LIFE XL|B110DL|Dash (?:X[2L]|L3)|PURE (?:X[LR]|MINI|View)|Life One X2|G50 (?:Mega|Plus)|G90(?: PRO)?|GRAND (?:M3|Max|5.5 HD|XL LTE|Mini)|R1 (?:HD|PLUS)|R2 (?:LTE|Plus)|Tank Xtreme [45].0|Tank Xtreme Pro|Touchbook M7 Pro|DASH X PLUS|C[456] 2019|BOLD N1|B130DL|Vivo (?:5 Mini|One Plus|5R|XL[234]| Plus|8L|XI[+]?|GO)|C5L 2020|C6 2020|G9 PRO|D701|VIEW 1)(?:[);/ ]|$)'
+  regex: 'BLU[ _]|(?:blu|Dash)[ _]([^/;)]+)(?: Build|[;)])|(?:Studio[ _](5.0K|5.5|View XL|Mega|C 8\+8|[CGM][ _]HD|[CGX]|SELFIE|Selfie LTE|Touch|M5 Plus|J[1258]|X8 HD|X10)|Advance (4.0 ?[LM]|5.[02](?: HD)?|A4|L[45])|M6 2021|ENERGY (DIAMOND|XL)|Energy X 2|LIFE XL|B110DL|Dash (?:X[2L]|L3)|PURE (?:X[LR]|MINI|View)|Life One X2|G50 (?:Mega|Plus)|G90(?: PRO)?|GRAND (?:M3|Max|5.5 HD|XL LTE|Mini)|R1 (?:HD|PLUS)|R2 (?:LTE|Plus)|Tank Xtreme [45].0|Tank Xtreme Pro|Touchbook M7 Pro|DASH X PLUS|C[456] 2019|BOLD (?:M7|N1)|B130DL|Vivo (?:5 Mini|One Plus|5R|XL[234]| Plus|8L|XI[+]?|GO)|C5L 2020|C6 2020|G9 PRO|D701|VIEW 1)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Advance (4.0 ?[LM]|4.0|5.[02](?: HD)?|A4|L[54])'
@@ -3072,8 +3077,8 @@ Blu:
       model: 'Pure $1'
     - regex: 'PURE MINI'
       model: 'Pure Mini'
-    - regex: 'BOLD N1'
-      model: 'Bold N1'
+    - regex: 'BOLD (M7|N1)'
+      model: 'Bold $1'
     - regex: 'Life One X2 Mini'
       model: 'Life One X2 Mini'
     - regex: 'LIFE ONE (X2?)'
@@ -5543,9 +5548,13 @@ Dopod:
 
 # Doro (doro.com)
 Doro:
-  regex: 'Doro'
+  regex: 'Doro|DSB-02[23]0'
   device: 'smartphone'
   models:
+    - regex: 'DSB-0230(?:[);/ ]|$)'
+      model: '8050'
+    - regex: 'DSB-0220(?:[);/ ]|$)'
+      model: '8080'
     - regex: 'Doro[ _-]?([^;/)]+) Build'
       model: '$1'
     - regex: 'Doro[ _-]([0-9a-z]+)'
@@ -9541,7 +9550,7 @@ KDDI:
 
 # Kodak
 Kodak:
-  regex: 'KODAK|(?:IM5|KD50|Ektra|Smartway_T1|D60LX)(?:[);/ ]|$)'
+  regex: 'KODAK|(?:IM5|KD50|Ektra|Smartway[_ ](?:[FT]1|L2)|D60LX)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'IM5'
@@ -9550,7 +9559,9 @@ Kodak:
       model: 'Seren $1'
     - regex: 'Ektra(?:[);/ ]|$)'
       model: 'Ektra'
-    - regex: '(?:KODAK[_ ])?SMARTWAY[_ ]([MTX]1|T3)'
+    - regex: '(?:KODAK[_ ])?SMARTWAY[_ ]L1 PRO'
+      model: 'Smartway L1 Pro'
+    - regex: '(?:KODAK[_ ])?SMARTWAY[_ ]([FLMTX]1|[LM]2|T3)'
       model: 'Smartway $1'
     - regex: 'Tablet (7|10)'
       device: 'tablet'
@@ -14163,11 +14174,13 @@ Pentagram:
 
 # Tcl (tcl.com)
 TCL:
-  regex: 'TCL,|TCL[_ -][a-z0-9]+|(?:TCL[_ -][^;/]+ Build)|(?:TCLGalaG60(?:\(9108A\))?|4187M|5087Z|5102B|5133A|5152D|5159[AJ]|5199I|6125[FDH]|7040N|9048S|A50[279]DL|T78[02]H|T770[HB]|T774H|T671[HF]|T790Y|6156H|T766H|T766[AJU]|T799[BH]|T775H|Percee TV|BeyondTV\d?)(?:_(?:RU|EEA))?(?:[);/ ]|$)'
+  regex: 'TCL,|TCL[_ -][a-z0-9]+|(?:TCL[_ -][^;/]+ Build)|(?:TCLGalaG60(?:\(9108A\))?|4187M|5004S|5087Z|5101A|5102[BKM]|5107G|5130[JM]|5133A|5148A|5152D|5159[AJ]|5199I|6125[FDH]|7040N|9048S|A50[279]DL|T78[02]H|T770[HB]|T774H|T671[HF]|T790Y|6156H|T766H|T766[AJU]|T799[BH]|T775H|Percee TV|BeyondTV\d?)(?:_(?:RU|EEA))?(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'TCLGalaG60(?:\(9108A\))?(?:[);/ ]|$)'
       model: 'Gala G60'
+    - regex: '5004S(?:[);/ ]|$)'
+      model: 'Signa'
     - regex: 'T774H(?:[);/ ]|$)'
       model: '20L'
     - regex: 'T775H(?:[);/ ]|$)'
@@ -14184,12 +14197,22 @@ TCL:
       model: 'C5'
     - regex: '5133A(?:[);/ ]|$)'
       model: 'L5'
-    - regex: '5102B(?:[);/ ]|$)'
+    - regex: '5102[BKM](?:[);/ ]|$)'
       model: 'L7'
     - regex: '5159[AJ](?:[);/ ]|$)'
       model: 'L9'
+    - regex: '5101A(?:[);/ ]|$)'
+      model: 'L9 Plus'
+    - regex: '5107G(?:[);/ ]|$)'
+      model: 'L9S'
+    - regex: '5130J(?:[);/ ]|$)'
+      model: 'L10+'
     - regex: '4187M(?:[);/ ]|$)'
       model: 'L10 Lite'
+    - regex: '5148A(?:[);/ ]|$)'
+      model: 'T9'
+    - regex: '5130M(?:[);/ ]|$)'
+      model: 'T Pro'
     - regex: 'T780H(?:[);/ ]|$)'
       model: 'Plex'
     - regex: 'T782H(?:[);/ ]|$)'
@@ -20964,9 +20987,13 @@ ZTE:
       model: '$1'
 
 Zuum:
-  regex: 'Zuum[ _-]|Android 6.+ UNIQ(?: Build|[);])|(?:ROCKET II|Akus Z|COVET|MAGNO(?:-S)?|ONIX S|STEDI|STELLAR(?:[ _](?:Z|PRO|[MP]1|M2))?|GRAVITY [ZM]|AURA X|COVET_PRO_LITE|RONI)(?:[);/ ]|$)'
+  regex: 'Zuum[ _-]|Android 6.+ UNIQ(?: Build|[);])|(?:ROCKET II|Akus (?:PRO|Z1?)|COVET|MAGNO(?:-S)?|ONIX S|STEDI|STELLAR(?:[ _](?:Z|PRO|[MP]1|M2))?|GRAVITY [ZM]|AURA X|COVET_PRO_LITE|RONI)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
+    - regex: 'AKUS PRO'
+      model: 'Akus Pro'
+    - regex: 'AKUS Z1'
+      model: 'Akus Z1'
     - regex: 'Akus Z'
       model: 'Akus Z'
     - regex: 'COVET_PRO_LITE'
@@ -25172,7 +25199,7 @@ Aspera:
   regex: 'ASPERA|(?:Wren)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
-    - regex: 'ASPERA[ _](R5h|RT3|A4[02]|A50)(?:[);/ ]|$)'
+    - regex: 'ASPERA[ _](R5h|R9|RT3|A4[02]|A50)(?:[);/ ]|$)'
       model: '$1'
     - regex: 'Wren(?:[);/ ]|$)'
       model: 'Wren'
@@ -25479,11 +25506,11 @@ KREZ:
 
 # KRIP (https://www.krip.com/)
 KRIP:
-  regex: 'K4m(?:[);/ ]|$)'
+  regex: 'K(?:4m|5[bdm]|6b|55h|57|65)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
-    - regex: 'K4m(?:[);/ ]|$)'
-      model: 'K4m'
+    - regex: 'K(4m|5[bdm]|6b|55h|57|65)(?:[);/ ]|$)'
+      model: 'K$1'
 
 # Kurio or KD Interactive (www.group-kd.com, kdplanet.com)
 Kurio:
