Adds detection for OpelMobile SmartX1 4G

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -24183,9 +24183,13 @@ Fortis:
 
 # OpelMobile (opelmobile.com.au)
 OpelMobile:
-  regex: ' OpelMobile_(SmartJX)(?:[);/ ]|$)'
+  regex: ' OpelMobile_Smart(?:JX|X1)(?:[);/ ]|$)'
   device: 'smartphone'
-  model: '$1'
+  models:
+    - regex: 'OpelMobile_SmartJX'
+      model: 'SmartJX'
+    - regex: 'OpelMobile_SmartX1'
+      model: 'SmartX1 4G'
 
 # NuAns
 NuAns:
