Adds detection for Hi Boost Ultra

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -21371,6 +21371,14 @@ BDF:
     - regex: 'K960N_MT(6580|6753)(_32_N)?(?:[);/ ]|$)'
       model: 'BK960N MT$1'
 
+# Hi (https://www.hi-online.co.za/)
+Hi:
+  regex: 'Boost Ultra(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'Boost Ultra(?:[);/ ]|$)'
+      model: 'Boost Ultra'
+
 # Highscreen
 Highscreen:
   regex: 'HIGHSCREEN|(Easy[- ]Power(?:[- ]Pro)?|Pure[_ ](?:Power|F)|Power Ice(?: Max)?|Easy[_ ]([SFL]|XL)(?:_Pro)?|Razar_Pro|Power Rage(?: Evo)?|Zera-S-Power|Zera[ _][UFS]|Power[ _]?Five[ _]?(?:Pro|Evo|Max|Max(?:Lite|2))|Power(?:Four|Five)|BOOST II(?:se)?|Fest(?:XL)?(?:-Pro)?|Tasty|Boost3|Boost 3(?: Pro)? SE|Expanse|Hercules|Alpha Rage|VergeM|Ice2|Prime [LS]|Spade|Spark 2|Alpha GTR|Wallet)(?:[);/ ]|$)'
