Improves detection for RCA Tablets Atlas 10.0"

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14427,7 +14427,7 @@ ProScan:
 
 # RCA Tablets (RCA)
 'RCA Tablets':
-  regex: 'RCT([^;/]+) Build|RCA RLTP4028|RCT6613W23P|RCT6513W87|RCT6973W43(?:MD)?|RCT6703W12|RCT(?:6A06P22|6603W47M7|6303W87(?:DK|M)|6773W22B|6203W46L|6873W42M|6K03W13)'
+  regex: 'RCT([^;/]+) Build|RCA RLTP4028|RCT6B06P23|RCT6613W23P|RCT6513W87|RCT6973W43(?:MD)?|RCT6703W12|RCT(?:6A06P22|6603W47M7|6303W87(?:DK|M)|6773W22B|6203W46L|6873W42M|6K03W13)'
   device: 'smartphone'
   models:
     - regex: 'RCA RLTP4028'
@@ -14444,7 +14444,7 @@ ProScan:
     - regex: 'RCT6773W22B'
       device: 'tablet'
       model: 'Voyager II 7.0"'
-    - regex: 'RCT6703W12'
+    - regex: 'RCT6703W12|RCT6B06P23'
       device: 'tablet'
       model: 'Atlas 10.0"'
     - regex: 'RCT6203W46L'
