--- a/Tests/fixtures/tablet-3.yml
+++ b/Tests/fixtures/tablet-3.yml
@@ -9262,3 +9262,21 @@
     model: Surface Duo 2
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; RCT6B06P23) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/83.0.4103.96 Mobile Safari/537.36 AlohaBrowser/3.10.2
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Aloha Browser
+    version: 3.10.2
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: RCA Tablets
+    model: Atlas 10.0"
+  os_family: Android
+  browser_family: Unknown
