Adds detection for ONN TBBVNC100005208

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -22071,7 +22071,7 @@ NEXON:
 
 # ONN (walmart)
 ONN:
-  regex: '(ONA19TB00[327]|10000520[6-9]|O8HD|100026191|100011886|100003561|100011885|100015685-A|TBBVNC100005207)(?:[);/ ]|$)'
+  regex: '(ONA19TB00[327]|10000520[6-9]|O8HD|100026191|100011886|100003561|100011885|100015685-A|TBBVNC10000520[78])(?:[);/ ]|$)'
   device: 'tablet'
   model: '$1'
 
