--- a/Tests/fixtures/tablet-3.yml
+++ b/Tests/fixtures/tablet-3.yml
@@ -9280,3 +9280,21 @@
     model: Atlas 10.0"
   os_family: Android
   browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; TBBVNC100005208) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/92.0.4515.159 Safari/537.36
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 92.0.4515.159
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: ONN
+    model: TBBVNC100005208
+  os_family: Android
+  browser_family: Chrome
