Adds detection for CORN R40

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4872,8 +4872,8 @@ CORN:
   regex: 'CORN '
   device: 'smartphone'
   models:
-    - regex: 'CORN R20'
-      model: 'R20'
+    - regex: 'CORN R([24])0'
+      model: 'R$10'
 
 # Cosmote (https://www.telekom.ro/)
 Cosmote:
