Adds detection for CORN R10

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4869,10 +4869,10 @@ Clarmin:
 
 # CORN (corn-mobile.com)
 CORN:
-  regex: 'CORN '
+  regex: 'CORN[_ ]'
   device: 'smartphone'
   models:
-    - regex: 'CORN R([24])0'
+    - regex: 'CORN R([124])0'
       model: 'R$10'
 
 # Cosmote (https://www.telekom.ro/)
