--- a/Tests/fixtures/smartphone-3.yml
+++ b/Tests/fixtures/smartphone-3.yml
@@ -12038,3 +12038,21 @@
     model: X4
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; V5_Nano Build/OPM2.171019.012) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/66.0.3359.126 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 66.0.3359.126
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Evertek
+    model: V5 Nano
+  os_family: Android
+  browser_family: Chrome
