Adds detection for Vivo Y76 5G, Y33, Y20T, Y15s, X70 5G, improves detection for Vivo Y20 (2021), Y20A, Y12s and sort regex

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3338,7 +3338,7 @@ VGO TEL:
 
 # Vivo (vivo.com.cn, vivo.com)
 Vivo:
-  regex: '((?:VIV-|BBG-)?(?<!FBCR/|NOA )vivo(?!(?:Browser)| 4G_r))|(?:V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[346][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36[AT])|V1731CA|V1732[AT]|V1818CT|V19[01]1[AT]|V1932[AT]|V191[3469][AT]|V192[1348]A|V193[04]A|V194[15]A|V1938CT|V1955A|V1938T|V1730EA|V19[26]2A|V196[35]A|V198[16]A|V1936A[L]?|V19[59]0A|V200[125]A|V2006|1819|V201[12]A|V2085A|V202[0345]C?A|V202[2-9]|V205[479]A|V203[0235-89]|V2031[E]?A?|V203[46]A|V2036_21|V204[013]|V204[6789]A|V205[0458]|V206[015689]|V20(?:6[158]|99|5[56]|66[B]?|7[23]|80)A|V2046|X50 Pro\+|I1927|I2012|V2118A|V2045|V2031_21|V2043_21|V213[346]A|V214[1358]A|I1928|V21[12]1A|V2106A|V2109|V211[01]|V2123A|V2026_21|V210[25]|V205[239])(?:[);/ ]|$)'
+  regex: '((?:VIV-|BBG-)?(?<!FBCR/|NOA )vivo(?!(?:Browser)| 4G_r))|(?:V1730(D[AT]|GA)|V18(01A0|13B[AT])|1819|I(?:192[78]|2012)|V(?:2006|202[2-9]|203[0-35-9]|204[0-3568]|205[02-5789]|206[015689]|2070|210[12459]|211[01]|212[049])|V(?:2026|2031|2036|2043)_21|V1936AL|V(?:1732|1809|181[3468]|182[149]|183[1268]|1901|191[13469]|192[1-48]|193[0246]|194[15]|195[05]|196[235]|198[16]|1990|200[125]|201[12]|202[03-5]|203[146]|204[6789]|205[45679]|2066B|206[1568]|207[23]|208[05]|2099|2106|211[18]|212[13]|213[346]|214[1358])A|V1824BA|V(?:1731|1818|2020)CA|V(?:1818|1938)CT|V(?:1730|2031)EA|V(?:1732|1809|181[3468]|182[19]|183[1268]|1901|1913|1938)T|X50 Pro\+)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'V1824[B]?A(?:[);/ ]|$)'
@@ -3545,6 +3545,8 @@ Vivo:
       model: 'X70 Pro+'
     - regex: 'V2133A(?:[);/ ]|$)'
       model: 'X70'
+    - regex: 'V2104(?:[);/ ]|$)'
+      model: 'X70 5G'
     - regex: 'X([0-9])Plus(?: A)?(?:[);/ ]|$)'
       model: 'X$1 Plus'
     - regex: 'vivo Xplay6(?:[);/ ]|$)'
@@ -3563,18 +3565,22 @@ Vivo:
       model: 'Y12i'
     - regex: 'vivo 1901(?:[);/ ]|$)'
       model: 'Y15'
+    - regex: 'V2120(?:[);/ ]|$)'
+      model: 'Y15s'
     - regex: 'vivo 1915(?:[);/ ]|$)'
       model: 'Y19'
     - regex: 'V202[79](?:[);/ ]|$)'
       model: 'Y20'
     - regex: 'vivo 1613(?:[);/ ]|$)'
       model: 'Y25'
-    - regex: 'V2043_21(?:[);/ ]|$)'
+    - regex: '(?:V2043_21|V2048)(?:[);/ ]|$)'
       model: 'Y20 (2021)'
-    - regex: 'V205[24](?:[);/ ]|$)'
+    - regex: '(?:V205[24]|V2070|V2101)(?:[);/ ]|$)'
       model: 'Y20A'
     - regex: 'V2037(?:[);/ ]|$)'
       model: 'Y20G'
+    - regex: 'V2129(?:[);/ ]|$)'
+      model: 'Y20T'
     - regex: 'V2065(?:[);/ ]|$)'
       model: 'Y20G (2021)'
     - regex: 'V2028(?:[);/ ]|$)'
@@ -3607,6 +3613,8 @@ Vivo:
       model: 'Y31'
     - regex: 'V2068A?(?:[);/ ]|$)'
       model: 'Y31s'
+    - regex: 'V2057(?:[);/ ]|$)'
+      model: 'Y33'
     - regex: 'V2109(?:[);/ ]|$)'
       model: 'Y33s'
     - regex: 'V1934A(?:[);/ ]|$)'
@@ -3653,6 +3661,8 @@ Vivo:
       model: 'Y73 (2021)'
     - regex: 'V2031A(?:[);/ ]|$)'
       model: 'Y73s'
+    - regex: 'V2124(?:[);/ ]|$)'
+      model: 'Y76 5G'
     - regex: 'V1913[AT](?:[);/ ]|$)'
       model: 'Y7s'
     - regex: 'vivo 180([38]|8i)(?:[);/ ]|$)'
@@ -3675,7 +3685,7 @@ Vivo:
       model: 'Y91i'
     - regex: 'V1945A(?:[);/ ]|$)'
       model: 'Y9s'
-    - regex: '(?:V2026|V2033)(?:[);/ ]|$)'
+    - regex: '(?:V2026|V2033|V2042)(?:[);/ ]|$)'
       model: 'Y12s'
     - regex: '(?:V20[63]9|V2026_21)(?:[);/ ]|$)'
       model: 'Y12s (2021)'
