--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12092,10 +12092,10 @@ Mobistel:
 
 # MobiIoT (https://mobi-iot.com/)
 MobiIoT:
-  regex: 'MobiPrint 4+(?:[);/ ]|$)'
+  regex: 'MobiPrint 4\+(?:[);/ ]|$)'
   device: 'peripheral'
   models:
-    - regex: 'MobiPrint 4+(?:[);/ ]|$)'
+    - regex: 'MobiPrint 4\+(?:[);/ ]|$)'
       model: 'MobiPrint 4 Plus'
 
 # Mecool
